organized mian.jsx and app, started components

--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,17 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.15",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.9",
+    "@mui/material": "^5.15.9",
     "@stripe/stripe-js": "^1.54.0",
     "@testing-library/react": "^14.0.0",
     "graphql": "^16.6.0",
     "happy-dom": "^9.20.3",
+    "install": "^0.13.0",
     "jwt-decode": "^3.1.2",
+    "npm": "^10.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
